Created website rough draft

--- a/src/content/pages/owners.html
+++ b/src/content/pages/owners.html
@@ -41,7 +41,7 @@ eleventyNavigation:
                 </picture>
             </li>
             <li class="cs-item">
-                <a href="" class="cs-link">
+                <a href="https://sunseeker.appfolio.com/connect/users/sign_in" class="cs-link">
                     <h3 class="cs-h3"><span class="cs-span">Tenant</span> Portal</h3>
                 </a>
                 <picture class="cs-background">
