--- a/src/index.html
+++ b/src/index.html
@@ -86,13 +86,13 @@ eleventyNavigation:
             <p class="cs-text">
                 Look no further than SunSeeker Rentals, your trusted partner in property management. Whether you're a seasoned landlord or new to the rental market, our dedicated team is here to streamline the leasing process and maximize your property's potential.
             </p>
-            <a href="" class="cs-button-solid">Schedule A Meeting</a>
+            <a href="https://calendly.com/sunseeker-rentals/property-management-call" target="_blank" class="cs-button-solid">Schedule A Meeting</a>
         </div>
     </div>
     <div class="cs-container">
         <ul class="cs-card-group">
             <li class="cs-item">
-                <a href="" class="cs-link">
+                <a href="/contact" class="cs-link">
                     <h3 class="cs-h3">Have Questions about Leasing Your Home?</h3>
                     <p class="cs-item-text">
                         We will go ahead that extra mile to ensure our clients welfare, our working hours convenient to our Client's from contact.
@@ -100,7 +100,7 @@ eleventyNavigation:
                 </a>
             </li>
             <li class="cs-item">
-                <a href="" class="cs-link">
+                <a href="https://sunseeker.appfolio.com/connect/users/sign_in" target="_blank" class="cs-link">
                     <h3 class="cs-h3">Existing Tenants View Your Portal Here</h3>
                     <p class="cs-item-text">
                         We will go ahead that extra mile to ensure our clients welfare, our working hours convenient to our Client's from contact.
@@ -108,7 +108,7 @@ eleventyNavigation:
                 </a>
             </li>
             <li class="cs-item">
-                <a href="" class="cs-link">
+                <a href="/rentals" class="cs-link">
                     <h3 class="cs-h3">View our current rentals on the market</h3>
                     <p class="cs-item-text">
                         We will go ahead that extra mile to ensure our clients welfare, our working hours convenient to our Client's from contact.
@@ -134,7 +134,7 @@ eleventyNavigation:
 <section id="stats-539">
     <div class="cs-container">
         <div class="cs-content">
-            <span class="cs-topper">Areas of Service</span>
+            <span class="cs-topper">Why Choose Us for Property Management?</span>
             <h2 class="cs-title">Property management for the entire
                 <span class="cs-color"> Phoenix metro area!</span></h2>
             <p class="cs-text">
@@ -147,19 +147,19 @@ eleventyNavigation:
                 <span class="cs-desc">Positive Reviews</span>
             </li>
             <li class="cs-item">
-                <span class="cs-number">x years</span>
-                <span class="cs-desc">In Property Management</span>
+                <span class="cs-number">15+</span>
+                <span class="cs-desc">Years in Property Management</span>
             </li>
             <li class="cs-item">
                 <span class="cs-number">400+</span>
                 <span class="cs-desc">Properties Managed</span>
             </li>
             <li class="cs-item">
-                <span class="cs-number">0</span>
+                <span class="cs-number">Zero</span>
                 <span class="cs-desc">Cancellation Fees</span>
             </li>
         </ul>
-        <a href="" class="cs-big-link">
+        <a href="https://www.youtube.com/watch?v=Tv4xwtJt1qo&embeds_referring_euri=https%3A%2F%2Fwww.valleyofthesunrentals.com%2F&source_ve_path=Mjg2NjY" target="_blank" class="cs-big-link">
             <!--Background Image-->
             <picture class="cs-background">
                 <source media="(min-width: 1024px)" srcset="/assets/images/thumbnail.png">
@@ -179,13 +179,22 @@ eleventyNavigation:
 
 <section id="reviews-727">
     <div class="cs-container">
-        <div class="cs-content">
-            <span class="cs-topper">Testimonials</span>
-            <h2 class="cs-title">Read Some Of Our Many Reviews!</h2>
-            <p class="cs-text">
-                You can reach us 7 days a week via email and you'll be amazed how quickly we respond to your communications. We're not like the other property management companies in the area and our current clients will confirm that! 
-            </p>
-        </div>
+
+        <!--                   
+    This is a cs-content section that you can swap out with any cs-content you have in your site that is not a Side By Side. 
+-->
+
+<div id="cs-content-830">
+    <div class="cs-flex">
+        <span class="cs-topper">Testimonials</span>
+        <h2 class="cs-title">Read Some Of Our Many Reviews!</h2>
+        <p class="cs-text">
+            You can reach us 7 days a week via email and you'll be amazed how quickly we respond to your communications. We're not like the other property management companies in the area and our current clients will confirm that! 
+        </p>
+    </div>
+    <a href="https://www.google.com/search?q=sunseeker+rentals&rlz=1C1VDKB_enUS1004US1004&oq=sunseeker+rentals&gs_lcrp=EgZjaHJvbWUqDwgAECMYJxjjAhiABBiKBTIPCAAQIxgnGOMCGIAEGIoFMhUIARAuGCcYrwEYxwEYgAQYigUYjgUyEAgCEC4YxwEYsQMY0QMYgAQyFggDEC4YrwEYxwEYsQMYgAQYmAUYmgUyBwgEEAAYgAQyBggFEEUYPDIGCAYQRRg8MgYIBxBFGDzSAQg1MTIwajBqN6gCCLACAQ&sourceid=chrome&ie=UTF-8#lrd=0x872b386610816511:0x3232c3c142555ad2,1,,,," target="_blank" class="cs-button-solid">Read Our Google Reviews</a>
+</div>
+                                
         <ul class="cs-card-group">
             <li class="cs-item">
                 <img class="cs-icon" src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Reviews/yellow-quote.svg" alt="quote icon" aria-hidden="true" width="40" height="38" loading="lazy" decoding="async">
@@ -232,23 +241,26 @@ eleventyNavigation:
             <!-- Left Image Section -->
             <div class="cs-left">
                 <picture class="cs-picture cs-picture1">
-                    <source media="(max-width: 600px)" srcset="/assets/images/construction-m.jpg">
-                    <source media="(min-width: 601px)" srcset="/assets/images/construction.jpg">
-                    <img aria-hidden="true" decoding="async" src="/assets/images/construction.jpg" alt="house" loading="lazy" width="400" height="560">
+                    <source media="(max-width: 600px)" srcset="/assets/images/extra-content1-m.png">
+                    <source media="(min-width: 601px)" srcset="/assets/images/extra-content1.png">
+                    <img aria-hidden="true" decoding="async" src="/assets/images/extra-content1.png" alt="house" loading="lazy" width="400" height="560">
                 </picture>
                 <picture class="cs-picture cs-picture2">
-                    <source media="(max-width: 600px)" srcset="/assets/images/cabinets2-m.jpg">
-                    <source media="(min-width: 601px)" srcset="/assets/images/cabinets2.jpg">
-                    <img aria-hidden="true" decoding="async" src="/assets/images/cabinets2.jpg" alt="cabinets" loading="lazy" width="400" height="560">
+                    <source media="(max-width: 600px)" srcset="/assets/images/extra-content2-m.png">
+                    <source media="(min-width: 601px)" srcset="/assets/images/extra-content2.png">
+                    <img aria-hidden="true" decoding="async" src="/assets/images/extra-content2.png" alt="cabinets" loading="lazy" width="400" height="560">
                 </picture>
             </div>
             <!-- Right Content Section-->
             <div class="cs-right">
-                <span class="cs-topper">SEO ranking</span>
-                <h2 class="cs-title">Talk about somethin to boost rankings here</h2>
+                <span class="cs-topper">Why Choose SunSeeker Rentals 
+                </span>
+                <h2 class="cs-title">Maximize Your Rental Property’s Potential with Sunseeker Rentals
+                </h2>
                 <p class="cs-text">
-                    Sunseeker Rentals' presence extends throughout the Phoenix area, offering personalized property management solutions tailored to each neighborhood's unique needs. With a focus on efficiency and transparency, we strive to exceed expectations and provide property owners with peace of mind                 </p>
-                <a href="/blog" class="cs-button-solid">Scheduel a meeting</a>
+                    Are you looking for a trusted property management company in Phoenix or the surrounding area? Sunseeker Rentals provides personalized property management solutions tailored to each neighborhood’s unique needs. With deep local expertise, we optimize rental pricing, minimize vacancies, and ensure a seamless experience for property owners. Our comprehensive services include tenant screening, marketing, maintenance, and financial reporting, giving you peace of mind and maximum ROI. We prioritize efficiency, transparency, and clear communication, so you’re always informed. Don’t let the stress of managing a property hold you back—schedule a free consultation today and discover how Sunseeker Rentals can elevate your rental success! Call us now or request a callback to discuss your customized property management strategy.
+                </p>
+                <a href="https://calendly.com/sunseeker-rentals/property-management-call" target="_blank" class="cs-button-solid">Schedule A Free Consultation Today</a>
             </div>
         </div>
     </section>
