--- a/src/content/pages/tenants.html
+++ b/src/content/pages/tenants.html
@@ -2,7 +2,7 @@
 title: 'Tenants'
 description: 'Meta description for the page'
 preloadImg: '/assets/images/cabinets2.jpg'
-permalink: 'project-one/'
+permalink: 'tenants/'
 eleventyNavigation:
     key: Tenants
     order: 3100
@@ -31,8 +31,8 @@ eleventyNavigation:
         </div>
         <ul class="cs-card-group">
             <li class="cs-item">
-                <a href="" class="cs-link">
-                    <h3 class="cs-h3"><span class="cs-span">Pay</span> Rent</h3>
+                <a href="https://www.paypal.com/ncp/payment/9RMEJ74HRU9LL" class="cs-link">
+                    <h3 class="cs-h3"><span class="cs-span">Pay </br>Application</span> Fees</h3>
                 </a>
                 <picture class="cs-background">
                     <source media="(max-width: 600px)" srcset="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/People/meeting1.jpg">
@@ -41,8 +41,8 @@ eleventyNavigation:
                 </picture>
             </li>
             <li class="cs-item">
-                <a href="" class="cs-link">
-                    <h3 class="cs-h3"><span class="cs-span">Tenant</span> Portal</h3>
+                <a href="https://sunseeker.appfolio.com/connect/users/sign_in" class="cs-link">
+                    <h3 class="cs-h3"><span class="cs-span">View </br>Tenant</span> Portal</h3>
                 </a>
                 <picture class="cs-background">
                     <source media="(max-width: 600px)" srcset="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/People/meeting2.jpg">
@@ -51,8 +51,8 @@ eleventyNavigation:
                 </picture>
             </li>
             <li class="cs-item">
-                <a href="" class="cs-link">
-                    <h3 class="cs-h3"><span class="cs-span">Operational</span> Excellence</h3>
+                <a href="/utility-info" class="cs-link">
+                    <h3 class="cs-h3"><span class="cs-span">Utility</span> Info</h3>
                 </a>
                 <picture class="cs-background">
                     <source media="(max-width: 600px)" srcset="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/People/meeting3.jpg">
@@ -61,8 +61,8 @@ eleventyNavigation:
                 </picture>
             </li>
             <li class="cs-item">
-                <a href="" class="cs-link">
-                    <h3 class="cs-h3"><span class="cs-span">Lifetime</span> Maintenance</h3>
+                <a href="/rentals" class="cs-link">
+                    <h3 class="cs-h3"><span class="cs-span">Apply For</br></span>A Rental</h3>
                 </a>
                 <picture class="cs-background">
                     <source media="(max-width: 600px)" srcset="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/People/meeting4.jpg">
