--- a/src/content/pages/about.html
+++ b/src/content/pages/about.html
@@ -102,7 +102,7 @@ eleventyNavigation:
                     <span class="cs-desc">Positive Reviews</span>
                 </li>
                 <li class="cs-stat">
-                    <span class="cs-number">15+</span>
+                    <span class="cs-number">28+</span>
                     <span class="cs-desc">Years of Service</span>
                 </li>
             </ul>
@@ -121,7 +121,7 @@ eleventyNavigation:
                 <span class="cs-topper">Services</span>
                 <h2 class="cs-title">No-Hassle Property Management
             </div>
-            <a href="https://www.youtube.com/@cindiellis2042/featured" target="_blank" class="cs-button-solid">View Our Property Management Youtube Videos!</a>
+            <a href="https://www.youtube.com/@cindiellis2042/featured" target="_blank" class="cs-button-solid">Watch Our Youtube Videos</a>
         </div>
         <div class="cs-wrapper">
             <p class="cs-text">
