--- a/src/index.html
+++ b/src/index.html
@@ -86,7 +86,7 @@ eleventyNavigation:
             <p class="cs-text">
                 Look no further than SunSeeker Rentals, your trusted partner in property management. Whether you're a seasoned landlord or new to the rental market, our dedicated team is here to streamline the leasing process and maximize your property's potential.
             </p>
-            <a href="https://calendly.com/sunseeker-rentals/property-management-call" target="_blank" class="cs-button-solid">Schedule A Meeting</a>
+            <a href="https://calendly.com/sunseeker-rentals/property-management-call" target="_blank" class="cs-button-solid">Schedule A Phone Call</a>
         </div>
     </div>
     <div class="cs-container">
@@ -232,41 +232,46 @@ eleventyNavigation:
     </div>
 </section>
 
-    <!-- ============================================ -->
-    <!--            Extra Content To Rank             -->
-    <!-- ============================================ -->
 
-    <section id="sbs-r">
-        <div class="cs-container">
-            <!-- Left Image Section -->
-            <div class="cs-left">
-                <picture class="cs-picture cs-picture1">
-                    <source media="(max-width: 600px)" srcset="/assets/images/extra-content1-m.png">
-                    <source media="(min-width: 601px)" srcset="/assets/images/extra-content1.png">
-                    <img aria-hidden="true" decoding="async" src="/assets/images/extra-content1.png" alt="house" loading="lazy" width="400" height="560">
-                </picture>
-                <picture class="cs-picture cs-picture2">
-                    <source media="(max-width: 600px)" srcset="/assets/images/extra-content2-m.png">
-                    <source media="(min-width: 601px)" srcset="/assets/images/extra-content2.png">
-                    <img aria-hidden="true" decoding="async" src="/assets/images/extra-content2.png" alt="cabinets" loading="lazy" width="400" height="560">
-                </picture>
-            </div>
-            <!-- Right Content Section-->
-            <div class="cs-right">
-                <span class="cs-topper">Why Choose SunSeeker Rentals 
-                </span>
-                <h2 class="cs-title">Maximize Your Rental Property’s Potential with Sunseeker Rentals
-                </h2>
-                <p class="cs-text">
-                    Are you looking for a trusted property management company in Phoenix or the surrounding area? Sunseeker Rentals provides personalized property management solutions tailored to each neighborhood’s unique needs. With deep local expertise, we optimize rental pricing, minimize vacancies, and ensure a seamless experience for property owners. Our comprehensive services include tenant screening, marketing, maintenance, and financial reporting, giving you peace of mind and maximum ROI. We prioritize efficiency, transparency, and clear communication, so you’re always informed. Don’t let the stress of managing a property hold you back—schedule a free consultation today and discover how Sunseeker Rentals can elevate your rental success! Call us now or request a callback to discuss your customized property management strategy.
-                </p>
-                <a href="https://calendly.com/sunseeker-rentals/property-management-call" target="_blank" class="cs-button-solid">Schedule A Free Consultation Today</a>
-            </div>
+<!-- ============================================ -->
+<!--             Side By Side Reverse             -->
+<!-- ============================================ -->
+
+<section id="sbsr-684">
+    <div class="cs-container">
+        <!-- Left Section -->
+        <div class="cs-image-group">
+            <picture class="cs-picture cs-picture1">
+                <source media="(max-width: 600px)" srcset="assets/images/why-choose1-m.png">
+                <source media="(min-width: 601px)" srcset="assets/images/why-choose1.png">
+                <img loading="lazy" decoding="async" src="assets/images/why-choose1.png" alt="people outside" width="306" height="360">
+            </picture>
+            <picture class="cs-picture cs-picture2">
+                <source media="(max-width: 600px)" srcset="assets/images/why-choose2-m.png">
+                <source media="(min-width: 601px)" srcset="assets/images/why-choose2.png">
+                <img loading="lazy" decoding="async" src="assets/images/why-choose2.png" alt="people outside" width="306" height="360">
+            </picture>
+            <picture class="cs-picture cs-picture3">
+                <source media="(max-width: 600px)" srcset="assets/images/why-choose3-m.png">
+                <source media="(min-width: 601px)" srcset="assets/images/why-choose3-m.png">
+                <img loading="lazy" decoding="async" src="assets/images/why-choose3-m.png" alt="person gardening" width="306" height="360">
+            </picture>
+            <picture class="cs-picture cs-picture4">
+                <source media="(max-width: 600px)" srcset="assets/images/why-choose4-m.png">
+                <source media="(min-width: 601px)" srcset="assets/images/why-choose4-m.png">
+                <img loading="lazy" decoding="async" src="assets/images/why-choose4-m.png" alt="urban environment in green" width="306" height="360">
+            </picture>
         </div>
-    </section>
+        <div class="cs-content">
+            <span class="cs-topper">Why Choose SunSeeker Rentals</span>
+            <h2 class="cs-title">Maximize Your Rental Property’s Potential with Sunseeker Rentals</h2>
+            <p class="cs-text">
+                Are you looking for a trusted property management company in Phoenix or the surrounding area? Sunseeker Rentals provides personalized property management solutions tailored to each neighborhood’s unique needs. With deep local expertise, we optimize rental pricing, minimize vacancies, and ensure a seamless experience for property owners. Our comprehensive services include tenant screening, marketing, maintenance, and financial reporting, giving you peace of mind and maximum ROI. We prioritize efficiency, transparency, and clear communication, so you’re always informed. Don’t let the stress of managing a property hold you back—schedule a free consultation today and discover how Sunseeker Rentals can elevate your rental success! Call us now or request a callback to discuss your customized property management strategy.
+            </p>
+            <a href="https://calendly.com/sunseeker-rentals/property-management-call" target="_blank" class="cs-button-solid">Schedule A Phone Call Today</a>
+        </div>
+    </div>
+</section>
+                                
 
-
-
-
-    {% include 'components/cta.html' %}
 {% endblock %}
