added google gauranteed section

--- a/src/index.html
+++ b/src/index.html
@@ -93,25 +93,25 @@ eleventyNavigation:
         <ul class="cs-card-group">
             <li class="cs-item">
                 <a href="/contact" class="cs-link">
-                    <h3 class="cs-h3">Have Questions about Leasing Your Home?</h3>
+                    <h3 class="cs-h3">Discover the Value of Your Rental</h3>
                     <p class="cs-item-text">
-                        We will go ahead that extra mile to ensure our clients welfare, our working hours convenient to our Client's from contact.
+                        Schedule a free consultation where we visit your property, assess its condition, and provide an expert rental price estimate — no strings attached.
                     </p>
                 </a>
             </li>
             <li class="cs-item">
-                <a href="https://sunseeker.appfolio.com/connect/users/sign_in" target="_blank" class="cs-link">
-                    <h3 class="cs-h3">Existing Tenants View Your Portal Here</h3>
+                <a href="/about" target="_blank" class="cs-link">
+                    <h3 class="cs-h3">Full-Service Management for Homeowners</h3>
                     <p class="cs-item-text">
-                        We will go ahead that extra mile to ensure our clients welfare, our working hours convenient to our Client's from contact.
+                        From marketing and tenant screening to maintenance and rent collection. We handle every detail so you can enjoy passive income without the hassle.
                     </p>
                 </a>
             </li>
             <li class="cs-item">
-                <a href="/rentals" class="cs-link">
-                    <h3 class="cs-h3">View our current rentals on the market</h3>
+                <a href="/" class="cs-link">
+                    <h3 class="cs-h3">Non-Management Tenant Placement Services</h3>
                     <p class="cs-item-text">
-                        We will go ahead that extra mile to ensure our clients welfare, our working hours convenient to our Client's from contact.
+                        Prefer to manage the property yourself? We’ll handle marketing, showings, screening, and lease signing — so you get a great tenant, without the legwork.
                     </p>
                 </a>
             </li>
@@ -138,8 +138,7 @@ eleventyNavigation:
             <h2 class="cs-title">Property management for the entire
                 <span class="cs-color"> Phoenix metro area!</span></h2>
             <p class="cs-text">
-                We are easily your best choice when looking for a property manager for a Phoenix area rental property. We have a very straight forward and easy to understand fee structure, with no "a la carte" pricing. Other than the monthly management fee, there is only one other fee (leasing fee). <strong>Best of all our service is premium when compared to other management companies.</strong>
-            </p>
+                We deliver full-service property management across the Phoenix metro and surrounding areas. With clear, competitive pricing and no hidden fees, we make owning rental property simple and stress-free. Expect reliable communication, expert guidance, and a team that treats your property like their own.            </p>
         </div>
         <ul class="cs-card-group">
             <li class="cs-item">
@@ -187,9 +186,9 @@ eleventyNavigation:
 <div id="cs-content-830">
     <div class="cs-flex">
         <span class="cs-topper">Testimonials</span>
-        <h2 class="cs-title">Read Some Of Our Many Reviews!</h2>
+        <h2 class="cs-title">Read Some Of Our Many Google Reviews!</h2>
         <p class="cs-text">
-            You can reach us 7 days a week via email and you'll be amazed how quickly we respond to your communications. We're not like the other property management companies in the area and our current clients will confirm that! 
+            We’re known for our fast communication, 7-day availability, and unmatched service. Don’t just take our word for it, read what real clients have to say about working with a property management team that truly delivers.
         </p>
     </div>
     <a href="https://www.google.com/search?q=sunseeker+rentals&rlz=1C1VDKB_enUS1004US1004&oq=sunseeker+rentals&gs_lcrp=EgZjaHJvbWUqDwgAECMYJxjjAhiABBiKBTIPCAAQIxgnGOMCGIAEGIoFMhUIARAuGCcYrwEYxwEYgAQYigUYjgUyEAgCEC4YxwEYsQMY0QMYgAQyFggDEC4YrwEYxwEYsQMYgAQYmAUYmgUyBwgEEAAYgAQyBggFEEUYPDIGCAYQRRg8MgYIBxBFGDzSAQg1MTIwajBqN6gCCLACAQ&sourceid=chrome&ie=UTF-8#lrd=0x872b386610816511:0x3232c3c142555ad2,1,,,," target="_blank" class="cs-button-solid">Read Our Google Reviews</a>
@@ -232,7 +231,29 @@ eleventyNavigation:
     </div>
 </section>
 
+<!-- ============================================ -->
+<!--                  Reviews                     -->
+<!-- ============================================ -->
 
+<section id="reviews-287">
+    <div class="cs-container">
+        <!--Content Left-->
+        <div class="cs-content">
+            <span class="cs-topper">Backed By Google Gauranteed</span>
+            <h2 class="cs-title">What is Google Gauranteed?</h2>
+            <p class="cs-text">
+                We are proud to announce that SunSeeker Rentals is now part of the Google Guaranteed program, a testament to our commitment to quality and customer satisfaction. This designation means that Google has thoroughly vetted our business through comprehensive screening and verification processes, including checks on licensing, insurance, and background, and ensuring we meet their stringent standards. Being Google Guaranteed not only enhances our credibility but also provides you with added assurance. <b>If you're not satisfied with our services, Google may reimburse you up to the amount paid for the initial service</b>, subject to a lifetime limit. ​This achievement underscores our dedication to delivering exceptional service and building trust with our customers.​ 
+            </p>
+        </div>
+        <!--Image Right-->
+        <picture class="cs-picture">
+            <source media="(max-width: 600px)" srcset="/assets/images/google-gauranteed.png">
+            <source media="(min-width: 601px)" srcset="/assets/images/google-gauranteed.png">
+            <img aria-hidden="true" loading="lazy" decoding="async" src="/assets/images/google-gauranteed.png" alt="playing piano" width="630" height="411">
+        </picture>
+    </div>
+</section>
+                                
 <!-- ============================================ -->
 <!--             Side By Side Reverse             -->
 <!-- ============================================ -->
